# culturabuilder-mcp

./: .gitignore  .gitmessage  ACCESSIBILITY_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CULTURABUILDER_QUICKSTART.md  DEPLOY_INSTRUCTIONS.md  FAQ.md  FIX_REMOTE.md  GITHUB_ACCESSIBILITY_TODO.md  GITHUB_READY_CHECKLIST.md  INSTALL.md  LICENSE  MANIFEST.in  MIGRATION_REPORT.md  PROJECT_STATUS.md  QUICK_START.md  README.md  README_BEGINNER_FRIENDLY.md  README_old.md  ROADMAP.md  SECURITY.md  cb  cb_command_demo.py  cb_completion.zsh  cleanup_project.sh  fix_commands.sh  install.ps1  install.sh  install_culturabuilder.py  migrate_to_culturabuilder.py  pyproject.toml  remove_web_frontend.sh  setup.py  test_cb_commands.md  test_installer.sh  test_mcp_server.js  update_github_repo.sh
.migration_backup/: CULTURABUILDER_QUICKSTART.md  culturabuilder_auto_demo.py  culturabuilder_demo.py  migrate_to_culturabuilder.py  start_culturabuilder.sh
.migration_backup/CulturaBuilder/: __main__.py
.migration_backup/Docs/: METRICS.md
.migration_backup/culturabuilder-web/: package.json
.migration_backup/tests/: test_metrics_manager.py
CulturaBuilder/: __main__.py
CulturaBuilder/Commands/: analyze.md  build.md  cleanup.md  design.md  document.md  estimate.md  explain.md  git.md  implement.md  improve.md  (+7 more)
Docs/: ARCHITECTURE.md  COMMANDS_REFERENCE.md  DOCUMENTATION.md  INSTALLATION_GUIDE.md  METRICS.md  commands-guide.md  culturabuilder-user-guide.md  flags-guide.md  installation-guide.md  personas-guide.md
config/: features.json  requirements.json
culturabuilder-mcp/: package-lock.json  package.json  tsconfig.json
culturabuilder-web/: index.html  package-lock.json  package.json  vite.config.js
profiles/: developer.json  minimal.json  quick.json
setup/: __init__.py
tests/: test_metrics_manager.py
(+54 files in other folders)
