[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CulturaBuilder"
dynamic = ["version"]
description = "CulturaBuilder Framework Management Hub"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mithun Gowda B", email = "contact@culturabuilder.dev"},
    {name = "NomenAK", email = "contact@culturabuilder.dev"},
]
requires-python = ">=3.8"
dependencies = [
    "setuptools>=45.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/culturabuilder/culturabuilder-mcp"
Repository = "https://github.com/culturabuilder/culturabuilder-mcp"
"Bug Tracker" = "https://github.com/culturabuilder/culturabuilder-mcp/issues"
"GitHub" = "https://github.com/culturabuilder/culturabuilder-mcp"
"Documentation" = "https://github.com/culturabuilder/culturabuilder-mcp/wiki"
"Community" = "https://github.com/culturabuilder/culturabuilder-mcp/discussions"

[project.scripts]
CulturaBuilder = "CulturaBuilder.__main__:main"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.*)"

[tool.hatch.build.targets.wheel]
packages = ["CulturaBuilder"]

[tool.hatch.build.targets.sdist]
include = [
    "CulturaBuilder/",
    "config/",
    "profiles/",
    "setup/",
    "VERSION",
    "README.md",
    "LICENSE",
    "MANIFEST.in",
]

